--- a/client/src/app/search-albums/search-albums.component.css
+++ b/client/src/app/search-albums/search-albums.component.css
@@ -1,21 +1,23 @@
-.img {
-  height: 150px;
-  margin-bottom: 5%;
-}
 .album-card {
-  margin-bottom: 1%;
-  max-width: 150px;
+  margin-bottom: 5px;
+  margin-right: 5px;
+  width: 15%;
   align-self: flex-end;
-}
-.container {
-  min-height: 100%;
-  width: 100%;
+
 }
 .search-form {
   width: 100%;
-  margin-left: 2%
+  margin-left: 2%;
+}
+.search-field {
+  width: 80%;
+  margin-left: 2%;
+  margin-right: 1%;
 }
 .search-results {
   width: 100%;
   margin-left: 2%
+}
+.text-align-right {
+  text-align: right;
 }
