--- a/client/src/app/search-albums/search-albums.component.css
+++ b/client/src/app/search-albums/search-albums.component.css
@@ -1,7 +1,7 @@
 .album-card {
   margin-bottom: 5px;
   margin-right: 5px;
-  width: 15%;
+  width: 12%;
   align-self: flex-end;
 
 }
@@ -9,8 +9,13 @@
   width: 100%;
   margin-left: 2%;
 }
-.search-field {
-  width: 80%;
+.search-field-half-width {
+  width: 30%;
+  margin-left: 2%;
+  margin-right: 1%;
+}
+.search-field-full-width {
+  width: 40%;
   margin-left: 2%;
   margin-right: 1%;
 }
