--- a/client/src/app/search-albums/search-albums.component.css
+++ b/client/src/app/search-albums/search-albums.component.css
@@ -1,10 +1,3 @@
-.album-card {
-  margin-bottom: 5px;
-  margin-right: 5px;
-  width: 12%;
-  align-self: flex-end;
-
-}
 .search-form {
   width: 100%;
   margin-left: 2%;
@@ -25,4 +18,46 @@
 }
 .text-align-right {
   text-align: right;
+}
+.album-card {
+  margin-bottom: 10px;
+  margin-right: 5px;
+  width: 18%;
+  align-self: flex-end;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+.album-card img {
+  width: 100%;
+}
+.card-content {
+  margin: 0px;
+  padding: 0px;
+}
+.row {
+  display: flex;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-top: 0px;
+  margin: 0px;
+  padding: 0px;
+}
+.album-title h5 {
+  margin: 5px;
+  margin-bottom: 2px;
+  padding: 0px;
+}
+.album-details {
+  margin: 5px;
+  margin-top: 0px;
+}
+.album-genres {
+  flex: 80%;
+  font-size: small;
+}
+.album-year {
+  flex: 20%;
+  font-size: small;
+  text-align: right;
+  margin-right: 5px;
 }
