added image flag added link to master in discogs

--- a/client/src/app/search-albums/search-albums.component.html
+++ b/client/src/app/search-albums/search-albums.component.html
@@ -20,7 +20,7 @@
     <img src="http://localhost:8080/album-image/{{album.id}}" alt="{{album.title}}">
     <div class="card-content">
       <div class="row album-title">
-          <h5>{{album.title}}</h5>
+          <h5><a href="https://www.discogs.com/master/{{album.id}}">{{album.title}}</a></h5>
       </div>
       <div class="row album-details">
         <div class="album-genres">{{album.genres}}</div>
