--- a/client/src/app/search-albums/search-albums.component.html
+++ b/client/src/app/search-albums/search-albums.component.html
@@ -17,7 +17,7 @@
 
 <div class="search-results" fxLayout="row wrap" fxLayout.xs="column" fxLayoutGap="1%" fxLayoutAlign="left">
   <div class="album-card" *ngFor="let album of results | async">
-    <img src="http://localhost:8080/album-image/{{album.id}}" alt="{{album.title}}">
+    <img src="/album-image/{{album.id}}" alt="{{album.title}}">
     <div class="card-content">
       <div class="row album-title">
           <h5><a href="https://www.discogs.com/master/{{album.id}}">{{album.title}}</a></h5>
