added RedisLabs logo in toolbar

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -5,3 +5,13 @@
 .toolbar-spacer {
     flex: 1 1 auto;
 }
+
+.redisearch-logo {
+	height: 50px;
+	padding: 0 14px;
+}
+
+.redislabs-logo {
+	height: 50px;
+	padding: 0 10px;
+}
