--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,11 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-        <span>Welcome to RediSearch!</span>
+        <span>Welcome to RediSearch</span>
+        <img class="redisearch-logo" alt="RediSearch" src="https://oss.redislabs.com/redisearch/logo.png">
         <span class="toolbar-spacer"></span>
-        <img class="toolbar-icon" width="50" alt="RediSearch" src="https://oss.redislabs.com/redisearch/logo.png">
+        <a class="redislabs-logo" href="https://redislabs.com">
+          <img height="50" alt="Redis Labs" src="assets/redislabs.png">
+        </a>
       </mat-toolbar-row>
 </mat-toolbar>
 
