--- a/client/src/app/search-albums/search-albums.component.css
+++ b/client/src/app/search-albums/search-albums.component.css
@@ -25,15 +25,23 @@
 }
 
 .album-card {
+	position: relative;
 	margin-bottom: 10px;
 	margin-right: 5px;
-	width: 18%;
 	align-self: flex-end;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	width: 260px;
 }
 
 .album-card img {
-	width: 100%;
+	width: 250px;
+	height: 250px;
+}
+
+.like-button-overlay {
+	display: inline-block;
+	position: absolute;
+	top: -5px;
+	left: -5px;
 }
 
 .card-content {
@@ -46,30 +54,14 @@
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
-	margin-top: 0px;
-	margin: 0px;
-	padding: 0px;
 }
 
-.album-title h5 {
-	margin: 5px;
+.row h5 {
+	margin-top: 0px;
 	margin-bottom: 2px;
-	padding: 0px;
 }
 
 .album-details {
-	margin: 5px;
-	margin-top: 0px;
-}
-
-.album-genres {
-	flex: 80%;
+	margin-bottom: 2px;
 	font-size: small;
-}
-
-.album-year {
-	flex: 20%;
-	font-size: small;
-	text-align: right;
-	margin-right: 5px;
 }
