--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,14 +1,2 @@
-<mat-toolbar class="toolbar" color="primary">
-    <mat-toolbar-row>
-        <span>ReDiscogs</span>
-        <img alt="RediSearch" src="https://oss.redislabs.com/redisearch/logo.png">        
-        <span class="toolbar-spacer"></span>
-        <form #userForm="ngForm" class="user-form">
-            <mat-form-field class="user-field">
-                <input matInput placeholder="User" [formControl]="userField">
-            </mat-form-field>
-        </form>
-    </mat-toolbar-row>
-</mat-toolbar>
-
-<app-search-albums></app-search-albums>
+<!--The content below is only a placeholder and can be replaced.-->
+<router-outlet></router-outlet>
