--- a/client/src/app/search-albums/search-albums.component.css
+++ b/client/src/app/search-albums/search-albums.component.css
@@ -1,3 +1,18 @@
+.user-form {
+	display: flex;
+	height: 50px;
+	margin: 0;
+}
+
+.toolbar-spacer {
+	flex: 1 1 auto;
+}
+
+.toolbar img {
+	height: 60%;
+	padding-left: 10px;
+}
+
 .search-form {
 	display: flex;
 	height: 50px;
