fixed websocket configuration

--- a/client/src/app/favorite-albums/favorite-albums.component.html
+++ b/client/src/app/favorite-albums/favorite-albums.component.html
@@ -8,7 +8,7 @@
 
 <div class="like-list">
 	<mat-list>
-		<mat-list-item *ngFor="let like of history.likes">
+		<mat-list-item *ngFor="let like of likes">
 	        <img mat-list-avatar src="/api/album-image/{{like.album.id}}" alt="{{like.album.title}}">
 	        <p mat-line>
 	          <span>{{like.album.artist}} -- </span>
