added time to likes

--- a/client/src/app/favorite-albums/favorite-albums.component.html
+++ b/client/src/app/favorite-albums/favorite-albums.component.html
@@ -14,7 +14,7 @@
 	          <span>{{like.album.artist}} -- </span>
 	          <span class="demo-secondary-text">{{like.album.title}}</span>
 	        </p>
-	        <h4 mat-line class="like-user">liked by {{like.user}}</h4>
+	        <h4 mat-line class="like-user">liked by {{like.user}} at {{like.time}}</h4>
 	        <mat-divider inset *ngIf="!last"></mat-divider>
 		</mat-list-item>
 	</mat-list>
