--- a/client/src/app/search-albums/search-albums.component.css
+++ b/client/src/app/search-albums/search-albums.component.css
@@ -42,14 +42,13 @@
 .album-card {
 	position: relative;
 	margin-bottom: 10px;
-	margin-right: 5px;
+	margin-right: 2%;
 	align-self: flex-end;
-	width: 260px;
+	width: 18%;
 }
 
 .album-card img {
-	width: 250px;
-	height: 250px;
+	width: 90%;
 }
 
 .like-button-overlay {
