--- a/rediscogs-ui/src/styles.css
+++ b/rediscogs-ui/src/styles.css
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 
 body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
   margin: 0;
-  font-family: Roboto, sans-serif;
 }
